# linphone-cmake-builder

./: CMakeLists.txt  prepare.py
builders/: CMakeLists.txt  bctoolbox.cmake  bellesip.cmake  belr.cmake  bzrtp.cmake  cyrussasl.cmake  ffmpeg.cmake  flexisip.cmake  freerdp.cmake  jose.cmake  jsoncpp.cmake  liboqs.cmake  lime.cmake  linphone.cmake  linphoneqt.cmake  matroska2.cmake  mbedtls.cmake  minizip.cmake  ms2.cmake  ms2plugins.cmake  msaaudio.cmake  msandroidcamera2.cmake  mselph264.cmake  msoboe.cmake  msx264.cmake  opencoreamr.cmake  openh264.cmake  openldap.cmake  openssl.cmake  opus.cmake  ortp.cmake  postquantumcryptoengine.cmake  sidh.cmake  soci.cmake  sofiasip.cmake  srtp.cmake  tunnel.cmake  turbojpeg.cmake  voamrwbenc.cmake  vpx.cmake  (+2 more)
builders/androidsupport/: CMakeLists.txt
builders/ffmpeg/: postinstall.cmake
builders/ffmpegandroid/: CMakeLists.txt
builders/openh264/: build.sh.cmake  install.sh.cmake  postinstall.cmake
builders/openldap/: postinstall.cmake
builders/openssl/: CMakeLists.txt
builders/vpx/: enable-qnx-build.patch  windows_build.sh.cmake  windows_configure.sh.cmake  windows_env.bat
cmake/: CMakeLists.txt  CheckBuildTools.cmake  LinphoneBuilderOptions.cmake  build.rpm.sh.cmake  build.sh.cmake  configure.rpm.sh.cmake  importlib.py  install.rpm.sh.cmake  install.sh.cmake  mingw_build.bat.cmake  mingw_configure.bat.cmake  mingw_install.bat.cmake
cmake/Autotools/: Autotools.cmake.in  CMakeLists.txt
configs/: config-android.cmake  config-bb10-arm.cmake  config-bb10-i486.cmake  config-bb10.cmake  config-desktop-common.cmake  config-desktop-raspberry.cmake  config-desktop.cmake  config-flexisip-rpm.cmake  config-flexisip.cmake  config-hwsanitizer.cmake  config-ios-arm64-simulator.cmake  config-ios.cmake  config-python-raspberry.cmake  config-python.cmake  config-sanitizer.cmake  config-uwp.cmake  config-yocto.cmake  options-android.cmake  options-desktop.cmake  options-ios.cmake  options-macos.cmake  options-raspberry.cmake  options-uwp.cmake  options-yocto.cmake
configs/desktop/linphone_package/: CMakeLists.txt
configs/desktop/linphone_package/mac-bundler/: linphone.bundle
configs/python/: CMakeLists.txt
options/: bctoolbox.cmake  bellesip.cmake  bzrtp.cmake  common.cmake  flexisip.cmake  linphone.cmake  ms2.cmake
toolchains/: toolchain-android-arm.cmake  toolchain-android-arm64.cmake  toolchain-android-armv7.cmake  toolchain-android-x86.cmake  toolchain-ios-arm64-simulator.cmake  toolchain-ios-armv7.cmake  toolchain-macos-arm64.cmake  toolchain-macos-x86_64.cmake  toolchain-raspberry.cmake  toolchain-windows-store.cmake
toolchains/android/: toolchain-android.cmake
toolchains/bb10/: toolchain-bb10.cmake
toolchains/ios/: toolchain-ios.cmake
toolchains/macos/: toolchain-macos.cmake
